# commutewise

./: .gitignore  README.md  pyproject.toml
data/: calendar_events.json  routes.json
docs/: design.md  workflow.md
src/: __init__.py  cli.py  config.py  destination.py  orchestrator.py  planner.py  recommendation.py  schemas.py  time_utils.py  validation.py
src/providers/: __init__.py  calendar.py  event_resolver.py  maps.py
src/providers/calendar/: __init__.py  calendar.py  event_resolver.py
src/providers/gemini/: __init__.py  client.py  intent_schema.py
src/providers/maps/: __init__.py  maps.py
tests/: __init__.py  test_calendar_provider.py  test_config.py  test_destination.py  test_orchestrator.py  test_planner.py  test_recommendation.py  test_schemas.py  test_time_utils.py  test_week1_flow.py
tests/providers/: __init__.py
tests/providers/calendar/: __init__.py  test_calendar_provider.py
tests/providers/maps/: __init__.py  test_maps_provider.py
