[project]
name = "commutewise"
version = "0.1.0"
description = "AI-powered commute planning agent"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
